# live-assistant

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.agents/skills/live-assistant/: SKILL.md
.claude/skills/live-assistant/: SKILL.md
.codex/skills/live-assistant/: SKILL.md
overlay/: index.html
src/: live_cli.py  server.py
