[project]
name = "ai-assistant"
version = "0.2.0"
description = "配信アシスタント (Skills + CLI)"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "pygame>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "silero-vad-lite>=0.2",
    "faster-whisper>=1.0",
    "obsws-python>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
live-assistant = "src.live_cli:main"
